@@ -58,6 +58,26 @@
 #define HAVE_INTTYPES_H 0
 
 //**********************************************************************
+//**** Default environment
+
+// Set defines to defaults for environment variables
+// If set to "", this default is ignored and the user is expected
+// to set them at Verilator runtime.
+
+#ifndef DEFENV_SYSTEMC
+# define DEFENV_SYSTEMC ""
+#endif
+#ifndef DEFENV_SYSTEMC_ARCH
+# define DEFENV_SYSTEMC_ARCH ""
+#endif
+#ifndef DEFENV_SYSTEMPERL
+# define DEFENV_SYSTEMPERL ""
+#endif
+#ifndef DEFENV_VERILATOR_ROOT
+# define DEFENV_VERILATOR_ROOT ""
+#endif
+
+//**********************************************************************
 //**** Compile options
 
 #include <sys/types.h>
