@@ -5,6 +5,9 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilator 3.65****
 
+***  Add support for hard-coding VERILATOR_ROOT etc in the executables,
+     to enable easier use of Verilator RPMs.  [Gunter Dannoritzer]
+
 **** Fix genvar to be signed, so "< 0" works properly.  [Niranjan Prabhu]
 
 **** Fix assignments to inputs inside functions/tasks.  [Patricio Kaplan]
